oauth2-proxy/oauth2-proxy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  namespace: nok-base

spec:
  selector:
    app: oauth2-proxy

  ports:
  - name: http
    port: 80
    targetPort: 4180

  type: ClusterIP
